CKCompiler/Analyzers/CKParser.cs
// Generated from CK.g4 by ANTLR 4.0.1-SNAPSHOT
namespace CKCompiler {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

public partial class CKParser : Parser {
	public const int
		CLASS=1, ELSE=2, FALSE=3, IF=4, RETURN=5, VAR=6, WHILE=7, NEW=8, TRUE=9, 
		DOT=10, MULT=11, DIV=12, PLUS=13, MINUS=14, LE=15, LT=16, GE=17, GT=18, 
		EQUAL=19, NOTEQUAL=20, ASSIGN=21, SEMI=22, LPAREN=23, RPAREN=24, LCURLY=25, 
		RCURLY=26, COMMA=27, COLON=28, IntTypeName=29, FloatTypeName=30, BoolTypeName=31, 
		CharTypeName=32, StringTypeName=33, VoidTypeName=34, STRING=35, INTEGER=36, 
		CHAR=37, FLOAT=38, ID=39, WS=40, COMMENT=41, MULTILINE_COMMENT=42, FALL_THROUGH=43;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'class'", "'else'", "'false'", "'if'", "'return'", "'var'", 
		"'while'", "'new'", "'true'", "'.'", "'*'", "'/'", "'+'", "'-'", "'<='", 
		"'<'", "'>='", "'>'", "'=='", "'!='", "'='", "';'", "'('", "')'", "'{'", 
		"'}'", "','", "':'", "'int'", "'float'", "'bool'", "'char'", "'string'", 
		"'void'", "STRING", "INTEGER", "CHAR", "FLOAT", "ID", "WS", "COMMENT", 
		"MULTILINE_COMMENT", "FALL_THROUGH"
	};
	public const int
		RULE_program = 0, RULE_classDef = 1, RULE_classBody = 2, RULE_classBodyItem = 3, 
		RULE_varDef = 4, RULE_varDefType = 5, RULE_varDefBody = 6, RULE_funcDef = 7, 
		RULE_funcArgs = 8, RULE_funcBody = 9, RULE_action = 10, RULE_statementExpr = 11, 
		RULE_block = 12, RULE_blockStatement = 13, RULE_expr = 14, RULE_primary = 15, 
		RULE_exprList = 16, RULE_literal = 17, RULE_type = 18;
	public static readonly string[] ruleNames = {
		"program", "classDef", "classBody", "classBodyItem", "varDef", "varDefType", 
		"varDefBody", "funcDef", "funcArgs", "funcBody", "action", "statementExpr", 
		"block", "blockStatement", "expr", "primary", "exprList", "literal", "type"
	};

	public override string GrammarFileName { get { return "CK.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public CKParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public IReadOnlyList<ClassDefContext> classDef() {
			return GetRuleContexts<ClassDefContext>();
		}
		public ClassDefContext classDef(int i) {
			return GetRuleContext<ClassDefContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_program; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 38; classDef();
				}
				}
				State = 41;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==CLASS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefContext : ParserRuleContext {
		public ITerminalNode COLON() { return GetToken(CKParser.COLON, 0); }
		public ITerminalNode ID(int i) {
			return GetToken(CKParser.ID, i);
		}
		public ITerminalNode CLASS() { return GetToken(CKParser.CLASS, 0); }
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(CKParser.ID); }
		public ClassBodyContext classBody() {
			return GetRuleContext<ClassBodyContext>(0);
		}
		public ClassDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_classDef; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterClassDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitClassDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefContext classDef() {
		ClassDefContext _localctx = new ClassDefContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_classDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43; Match(CLASS);
			State = 44; Match(ID);
			State = 47;
			_la = _input.La(1);
			if (_la==COLON) {
				{
				State = 45; Match(COLON);
				State = 46; Match(ID);
				}
			}

			State = 49; classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassBodyContext : ParserRuleContext {
		public ITerminalNode LCURLY() { return GetToken(CKParser.LCURLY, 0); }
		public IReadOnlyList<ClassBodyItemContext> classBodyItem() {
			return GetRuleContexts<ClassBodyItemContext>();
		}
		public ClassBodyItemContext classBodyItem(int i) {
			return GetRuleContext<ClassBodyItemContext>(i);
		}
		public ITerminalNode RCURLY() { return GetToken(CKParser.RCURLY, 0); }
		public ClassBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_classBody; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterClassBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitClassBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassBodyContext classBody() {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_classBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51; Match(LCURLY);
			State = 55;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==VAR || _la==ID) {
				{
				{
				State = 52; classBodyItem();
				}
				}
				State = 57;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 58; Match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassBodyItemContext : ParserRuleContext {
		public FuncDefContext funcDef() {
			return GetRuleContext<FuncDefContext>(0);
		}
		public VarDefContext varDef() {
			return GetRuleContext<VarDefContext>(0);
		}
		public ClassBodyItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_classBodyItem; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterClassBodyItem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitClassBodyItem(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassBodyItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassBodyItemContext classBodyItem() {
		ClassBodyItemContext _localctx = new ClassBodyItemContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_classBodyItem);
		try {
			State = 62;
			switch (_input.La(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60; funcDef();
				}
				break;
			case VAR:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61; varDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarDefContext : ParserRuleContext {
		public VarDefBodyContext varDefBody(int i) {
			return GetRuleContext<VarDefBodyContext>(i);
		}
		public ITerminalNode COMMA(int i) {
			return GetToken(CKParser.COMMA, i);
		}
		public ITerminalNode VAR() { return GetToken(CKParser.VAR, 0); }
		public IReadOnlyList<ITerminalNode> COMMA() { return GetTokens(CKParser.COMMA); }
		public IReadOnlyList<VarDefBodyContext> varDefBody() {
			return GetRuleContexts<VarDefBodyContext>();
		}
		public ITerminalNode SEMI() { return GetToken(CKParser.SEMI, 0); }
		public VarDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_varDef; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterVarDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitVarDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarDefContext varDef() {
		VarDefContext _localctx = new VarDefContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_varDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64; Match(VAR);
			State = 65; varDefBody();
			State = 70;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMA) {
				{
				{
				State = 66; Match(COMMA);
				State = 67; varDefBody();
				}
				}
				State = 72;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 73; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarDefTypeContext : ParserRuleContext {
		public ITerminalNode COLON() { return GetToken(CKParser.COLON, 0); }
		public ITerminalNode ID(int i) {
			return GetToken(CKParser.ID, i);
		}
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(CKParser.ID); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public VarDefTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_varDefType; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterVarDefType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitVarDefType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarDefType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarDefTypeContext varDefType() {
		VarDefTypeContext _localctx = new VarDefTypeContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_varDefType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; Match(ID);
			State = 76; Match(COLON);
			State = 79;
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				State = 77; type();
				}
				break;

			case 2:
				{
				State = 78; Match(ID);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarDefBodyContext : ParserRuleContext {
		public VarDefTypeContext varDefType() {
			return GetRuleContext<VarDefTypeContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode ASSIGN() { return GetToken(CKParser.ASSIGN, 0); }
		public VarDefBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_varDefBody; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterVarDefBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitVarDefBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarDefBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarDefBodyContext varDefBody() {
		VarDefBodyContext _localctx = new VarDefBodyContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_varDefBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; varDefType();
			State = 84;
			_la = _input.La(1);
			if (_la==ASSIGN) {
				{
				State = 82; Match(ASSIGN);
				State = 83; expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDefContext : ParserRuleContext {
		public ITerminalNode COLON() { return GetToken(CKParser.COLON, 0); }
		public ITerminalNode RPAREN() { return GetToken(CKParser.RPAREN, 0); }
		public ITerminalNode ID(int i) {
			return GetToken(CKParser.ID, i);
		}
		public FuncArgsContext funcArgs() {
			return GetRuleContext<FuncArgsContext>(0);
		}
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(CKParser.ID); }
		public FuncBodyContext funcBody() {
			return GetRuleContext<FuncBodyContext>(0);
		}
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode LPAREN() { return GetToken(CKParser.LPAREN, 0); }
		public FuncDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_funcDef; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterFuncDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitFuncDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDefContext funcDef() {
		FuncDefContext _localctx = new FuncDefContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_funcDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; Match(ID);
			State = 87; Match(LPAREN);
			State = 89;
			_la = _input.La(1);
			if (_la==ID) {
				{
				State = 88; funcArgs();
				}
			}

			State = 91; Match(RPAREN);
			State = 92; Match(COLON);
			State = 95;
			switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				State = 93; type();
				}
				break;

			case 2:
				{
				State = 94; Match(ID);
				}
				break;
			}
			State = 97; funcBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncArgsContext : ParserRuleContext {
		public IReadOnlyList<VarDefTypeContext> varDefType() {
			return GetRuleContexts<VarDefTypeContext>();
		}
		public ITerminalNode COMMA(int i) {
			return GetToken(CKParser.COMMA, i);
		}
		public VarDefTypeContext varDefType(int i) {
			return GetRuleContext<VarDefTypeContext>(i);
		}
		public IReadOnlyList<ITerminalNode> COMMA() { return GetTokens(CKParser.COMMA); }
		public FuncArgsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_funcArgs; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterFuncArgs(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitFuncArgs(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncArgs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncArgsContext funcArgs() {
		FuncArgsContext _localctx = new FuncArgsContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_funcArgs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; varDefType();
			State = 104;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMA) {
				{
				{
				State = 100; Match(COMMA);
				State = 101; varDefType();
				}
				}
				State = 106;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncBodyContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public FuncBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_funcBody; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterFuncBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitFuncBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncBodyContext funcBody() {
		FuncBodyContext _localctx = new FuncBodyContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_funcBody);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionContext : ParserRuleContext {
		public ActionContext action(int i) {
			return GetRuleContext<ActionContext>(i);
		}
		public StatementExprContext statementExpr() {
			return GetRuleContext<StatementExprContext>(0);
		}
		public ITerminalNode WHILE() { return GetToken(CKParser.WHILE, 0); }
		public IReadOnlyList<ActionContext> action() {
			return GetRuleContexts<ActionContext>();
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(CKParser.SEMI, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode ELSE() { return GetToken(CKParser.ELSE, 0); }
		public ITerminalNode IF() { return GetToken(CKParser.IF, 0); }
		public ITerminalNode RETURN() { return GetToken(CKParser.RETURN, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_action; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterAction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitAction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionContext action() {
		ActionContext _localctx = new ActionContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_action);
		int _la;
		try {
			State = 129;
			switch (_input.La(1)) {
			case LCURLY:
				EnterOuterAlt(_localctx, 1);
				{
				State = 109; block();
				}
				break;
			case WHILE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 110; Match(WHILE);
				State = 111; expr(0);
				State = 112; action();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 3);
				{
				State = 114; Match(IF);
				State = 115; expr(0);
				State = 116; action();
				State = 119;
				switch ( Interpreter.AdaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					State = 117; Match(ELSE);
					State = 118; action();
					}
					break;
				}
				}
				break;
			case RETURN:
				EnterOuterAlt(_localctx, 4);
				{
				State = 121; Match(RETURN);
				State = 123;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FALSE) | (1L << NEW) | (1L << TRUE) | (1L << LPAREN) | (1L << STRING) | (1L << INTEGER) | (1L << CHAR) | (1L << FLOAT) | (1L << ID))) != 0)) {
					{
					State = 122; expr(0);
					}
				}

				State = 125; Match(SEMI);
				}
				break;
			case FALSE:
			case NEW:
			case TRUE:
			case LPAREN:
			case STRING:
			case INTEGER:
			case CHAR:
			case FLOAT:
			case ID:
				EnterOuterAlt(_localctx, 5);
				{
				State = 126; statementExpr();
				State = 127; Match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementExprContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StatementExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_statementExpr; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterStatementExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitStatementExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementExprContext statementExpr() {
		StatementExprContext _localctx = new StatementExprContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_statementExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131; expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public BlockStatementContext blockStatement(int i) {
			return GetRuleContext<BlockStatementContext>(i);
		}
		public ITerminalNode LCURLY() { return GetToken(CKParser.LCURLY, 0); }
		public IReadOnlyList<BlockStatementContext> blockStatement() {
			return GetRuleContexts<BlockStatementContext>();
		}
		public ITerminalNode RCURLY() { return GetToken(CKParser.RCURLY, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_block; }
		public override void EnterRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICKListener typedListener = listener as ICKListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICKVisitor<TResult> typedVisitor = visitor as ICKVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133; Match(LCURLY);
			State = 137;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FALSE) | (1L << IF) | (1L << RETURN) | (1L << VAR) | (1L << WHILE) | (1L << NEW) | (1L << TRUE) | (1L << LPAREN) | (1L << LCURLY) | (1L << STRING) | (1L << INTEGER) | (1L << CHAR) | (1L << FLOAT) | (1L << ID))) != 0)) {
				{
				{
				State = 134; blockStatement();
				}
				}
				State = 139;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 140; Match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
